--- a/stylesheets/mystylesheet.css
+++ b/stylesheets/mystylesheet.css
@@ -50,26 +50,69 @@ table {
 
 
 /*My CSS*/
-body{background-image: url("../images/logowatermark.jpg");background-size: 100%;}
+body{background-image: url("../images/logowatermark.jpg");background-size: auto; position:relative;}
 
-li{margin:1px;}
+li{margin:5px;}
 
-p{padding:2px;}
+p{padding:0px;}
 
-img{top: 100px;margin: 0 10px;}
 
-ol{list-style:disc;color:green;}
 
-ul{list-style:square;color:green;}
+ol{list-style:disc;color:white;}
 
-.center{margin:0 50%;}
+ul{list-style:square;color:black;}
+
+.center{margin:0 0%;}
 
 	a:hover {color:yellow;background-color: blue;}
 	a:active{color:red;}
 
 .colorred{color:red;}
+.colorgreen{color:green;}
+.colorblue{color:blue;}
+.title{color:blue; font-size: 48px}
+nav{background-color: transparent;}
+table#first
+	{position: relative;
+	bottom:40px;
+	color:purple; 
+	font-size: 50px;}
 
-table{position:fixed;bottom: 40px;color:white;font-size: 25px;}
-tr:nth-of-type(even){;background-color:yellow;}
-tr:nth-of-type(odd){;background-color:blue;}
+
 thead{background-color:white;}
+p:first-child{color:black;}
+p:nth-child(2n+1){color:black;}
+p:nth-child(2) {background-color:yellow; width:200px;}
+p:last-child{color:red;}
+p:nth-last-child(2) {background-color:gray;width:200px;}
+
+table#best{
+	position:bottom;
+	bottom: 10px;
+	background-color:transparent;
+	border: 5px solid blue;
+	width: 100%;
+	height: 100px;
+	text-align:center;
+}
+
+tr#table_header{
+	background-color:red; font-color:white;
+}
+
+th, td{
+	border: 2px solid blue;
+}
+
+.bestrow {border:2px solid yellow;}
+.bestcol {border:2px solid yellow;}
+.bestcol:first-child;{color:blue; background-color:black;}
+.bestcol:nth-child(2){color:purple; background-color:white;}
+.bestcol:nth-child(3){color:red; background-color:black;}
+.bestcol:nth-child(4){color:black; background-color:white;}
+.bestcol:nth-child(5){color:yellow; background-color:black;}
+.bestcol:nth-child(6){color:red; background-color:white;}
+.bestcol:nth-child(7){color:gray; background-color:black;}
+.bestcol:last-child{color:green;}
+.firstrow:nth-of-type(odd){color:blue;}
+.firstrow:nth-of-type(even){color:yellow;}
