--- a/stylesheets/solarsystemstylesheet.css
+++ b/stylesheets/solarsystemstylesheet.css
@@ -4,7 +4,7 @@
 
 /*opacity:0.2;*/
 
-html{background:url(../images/milkywayfade.jpg);
+html{background:url(../images/milkywayfadelight.jpg);
 	background-clip:padding-box;
 }
 
@@ -19,8 +19,9 @@ font: 14px "Verdana", Georgia,Serif;
  }
  aside{background-color:rgba(0,128,255,0.2);
  	float:left;
+ 	margin-top:10px;
  	width:0px;
- 	margin:70px;
+ 	margin:10px;
  	padding:0px;
 }
 
@@ -119,7 +120,7 @@ font: 14px "Verdana", Georgia,Serif;
 		background-clip:padding-box;
 		position:relative;
 		float:left;
-		margin-left: 55px;
+		margin-left: 115px;
 		width:900px;
 		height:relative;
 		margin-top: 10px;
