--- a/stylesheets/solarsystemstylesheet.css
+++ b/stylesheets/solarsystemstylesheet.css
@@ -4,7 +4,7 @@
 
 /*opacity:0.2;*/
 
-html{background:url(../images/milkywayfadelight.jpg);
+html{background:url(../images/milkywayfadelight.jpg) no-repeat;
 	background-clip:padding-box;
 }
 
